Moving DTO (pages, htmls) to Examples increment version

--- a/src/test/resources/htmlXmlSourceFiles/LinkedInTextAndValuesComparationHtmlDTO.html
+++ b/src/test/resources/htmlXmlSourceFiles/LinkedInTextAndValuesComparationHtmlDTO.html
@@ -674,7 +674,7 @@ Stockholm, Sweden
             d.onerror = d.onload = function () { d.onerror = d.onload = null; };
             d.src = [
                 protocol,
-                "//secure-us.imrworldwide.com/cgi-bin/m?ci=us-603751h&amp;cg=0&amp;htmls.cc=1&amp;si=",
+                "//secure-us.imrworldwide.com/cgi-bin/m?ci=us-603751h&amp;cg=0&amp;pages.htmls.cc=1&amp;si=",
                 escape(window.location.href), "&amp;rp=",
                 escape(document.referrer),
                 "&amp;ts=compact&amp;rnd=",
@@ -684,7 +684,8 @@ Stockholm, Sweden
     });
 </script>
 <noscript>
-    &lt;img src="http://secure-us.imrworldwide.com/cgi-bin/m?ci=us-603751h&amp;cg=0&amp;htmls.cc=1&amp;ts=noscript" width="1" height="1" alt="" style="display:none"/&gt;
+    &lt;img src="http://secure-us.imrworldwide.com/cgi-bin/m?ci=us-603751h&amp;cg=0&amp;pages.htmls.cc=1&amp;ts=noscript"
+    width="1" height="1" alt="" style="display:none"/&gt;
 </noscript>
 <script type="text/javascript">
     if(typeof(WEBTRACK_GLOBAL) !== "undefined") {
